fix(ui5-li): correct truncation behaviour of info text

--- a/packages/main/src/themes/ListItem.css
+++ b/packages/main/src/themes/ListItem.css
@@ -81,7 +81,7 @@
 	padding-bottom: 0.375rem;
 }
 
-.ui5-li-title-wrapper {
+.ui5-li-text-wrapper {
 	display: flex;
 	flex-direction: column;
 	flex: auto;
@@ -89,10 +89,15 @@
 	line-height: normal;
 }
 
-:host([description]) .ui5-li-title-wrapper {
+:host([description]) .ui5-li-text-wrapper {
 	height: 100%;
 	justify-content: space-between;
 	padding: 0.125rem 0;
+}
+
+.ui5-li-description-info-wrapper {
+	display: flex;
+	justify-content: space-between;
 }
 
 .ui5-li-title {
@@ -100,6 +105,7 @@
 	font-size: var(--_ui5_list_item_title_size);
 }
 
+.ui5-li-info,
 .ui5-li-title,
 .ui5-li-desc {
 	white-space: nowrap;
@@ -116,10 +122,9 @@
 	margin: 0 0.25rem;
 	color: var(--sapNeutralTextColor);
 	font-size: 0.875rem;
-	flex-shrink: 0;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
+	min-width: 7.5rem;
+	text-align: right;
+	max-width: 40%;
 }
 
 :host([description]) .ui5-li-info {
@@ -199,6 +204,10 @@
 
 :host [dir="rtl"] .ui5-li-img {
 	margin: .5rem 0 .5rem 0.75rem;
+}
+
+[dir="rtl"] .ui5-li-info {
+	text-align: left;
 }
 
 :host([_mode="SingleSelectBegin"]) [dir="rtl"].ui5-li-root {
